<resources>
    <string name="app_name">FoodTil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorite Recipes</string>
    <string name="food_joke">Joke</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="vegan">Vegan</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="break_fast">Break Fast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="drink">Drink</string>
    <string name="snack">Snack</string>
    <string name="finger_food">Finger Food</string>
    <string name="marinade">Marinade</string>
    <string name="sauce">Sauce</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="content_description_tab_recipes">fab button for get the types of recipes</string>
    <string name="content_description_nointernet">Image that show a sad face for no internet connection.</string>
    <string name="content_description_image">Image of the recipe</string>
    <string name="heart_image">heart image</string>
    <string name="clock_image">clock image</string>
    <string name="vegan_image">vegan image</string>
    <string name="imagecheck_of_overview">ImageCheck of overview</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="no_favorites_recipes">No Favorites Recipes.</string>
    <string name="no_data_favorite">Image show that the user does not have any favorite recipe</string>
    <string name="delete_favorite_menu">Delete favorite menu</string>
    <string name="delete_all">Delete all</string>
    <string name="text_joke_default">lorem ipsum dolor, sit amet, consectetur adipising in the dark of the night and in the ligth of the day. I love my beautiful women</string>
    <string name="error">Error</string>
    <string name="share">Share</string>
</resources>