<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="result"
            type="com.sebasorozcob.www.foodtil.models.Result" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recipesRowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/rowCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/lightMediumGray"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/recipeImageView"
                    android:layout_width="200dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    loadImageFromUrl="@{result.image}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@string/content_description_image" />

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/courgette"
                    android:maxLines="2"
                    android:text="@{result.title}"
                    android:textColor="@color/darker"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/recipeImageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/descriptionTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@{result.summary}"
                    android:textColor="@color/darkGray"
                    app:layout_constraintEnd_toEndOf="@+id/titleTextView"
                    app:layout_constraintStart_toStartOf="@+id/titleTextView"
                    app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

                <ImageView
                    android:id="@+id/heartImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="36dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/heartTextView"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/heartTextView"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_heart"
                    app:tint="@color/red"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/heart_image" />

                <TextView
                    android:id="@+id/heartTextView"
                    setNumberOfLikes="@{result.aggregateLikes}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    app:layout_constraintStart_toStartOf="@+id/descriptionTextView"
                    app:layout_constraintTop_toBottomOf="@+id/heartImageView"
                    tools:text="100" />

                <ImageView
                    android:id="@+id/clockImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="@color/yellow"
                    app:layout_constraintEnd_toEndOf="@+id/clockTextView"
                    app:layout_constraintStart_toStartOf="@+id/clockTextView"
                    app:layout_constraintTop_toTopOf="@+id/heartImageView"
                    app:srcCompat="@drawable/ic_clock"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/clock_image" />

                <TextView
                    android:id="@+id/clockTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    tools:text="100"
                    android:gravity="center"
                    setNumberOfMinutes="@{result.readyInMinutes}"
                    android:textColor="@color/yellow"
                    android:textAlignment="center"
                    app:layout_constraintStart_toEndOf="@+id/heartTextView"
                    app:layout_constraintTop_toBottomOf="@+id/clockImageView" />

                <ImageView
                    android:id="@+id/leafImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    applyVeganColor="@{result.vegan}"
                    app:layout_constraintEnd_toEndOf="@+id/leafTextView"
                    app:layout_constraintStart_toStartOf="@+id/leafTextView"
                    app:layout_constraintTop_toTopOf="@+id/clockImageView"
                    app:srcCompat="@drawable/ic_leaf"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/vegan_image" />

                <TextView
                    android:id="@+id/leafTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    applyVeganColor="@{result.vegan}"
                    android:layout_marginStart="24dp"
                    android:text="@string/vegan"
                    android:textAlignment="center"
                    app:layout_constraintStart_toEndOf="@+id/clockTextView"
                    app:layout_constraintTop_toBottomOf="@+id/leafImageView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>